<?xml version="1.0"?>
    <package format="2">
    <name>ddynamic_reconfigure</name>
    <version>0.0.6</version>
    <description>The ddynamic_reconfigure package</description>

    <maintainer email="theNODO55@gmail.com">Noam Dori</maintainer>

    <license>BSD</license>

    <!-- <url type="website">http://wiki.ros.org/ddynamic_reconfigure</url> -->

    <author email="theNODO55@gmail.com">Noam Dori</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <depend>std_msgs</depend>
    <depend>roscpp</depend>
    <depend>dynamic_reconfigure</depend>

    <exec_depend>message_runtime</exec_depend>
    <test_depend>rostest</test_depend>
    <test_depend>google-mock</test_depend>
</package>
