<?xml version="1.0"?>
<package format="2">
  <name>ddynamic_reconfigure</name>
  <version>0.2.1</version>
  <description>The ddynamic_reconfigure package</description>

  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tome</maintainer>
  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/ddynamic_reconfigure</url> -->

  <author email="hilario.tome@pal-robotics.com">Hilario Tome</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>

  <test_depend>rostest</test_depend>
  <test_depend>google-mock</test_depend>
</package>
