<?xml version="1.0"?>
<package format="2">
  <name>occupancy</name>
  <version>0.1.0</version>
  <description>Package to generate occupancy map from Intel(R) Realsense(TM) T265 tracking and D400 depth</description>

  <maintainer email="phillip.schmidt@intel.com">Phillip Schmidt</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
</package>
